# ext-shopware

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUILD.md  Cargo.toml  Dockerfile  Dockerfile.gnu  Dockerfile.musl  LICENSE  Makefile  README.md  build-docker.sh  build-local.sh  composer.json  devenv.nix  gzip.php  phpbench.json  phpunit.xml  zstd.php
.github/: ARTIFACTS.md
.github/workflows/: build-artifact.yml  build-multi-arch.yml  build.yml  release.yml  rust.yml  test-example.yml.template  test.yml
benchmarks/: ImageBench.php
examples/: gzip.php  uuid-ext.php  uuid-php.php  zstd.php
src/: lib.rs  libvips.rs  lightningcss.rs  quickjs.rs
tests/: ImageTest.php  LightningCSSTest.php  QuickJSTest.php  uuid.php  zstd.php
