[package]
name = "ext-sw"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.69"
ext-php-rs = { version = "0.10", features = ["anyhow"]}
rand = "0.8.5"
uuid = { version = "1.3.3", features = ["v7", "std", "fast-rng"] }
zstd = "0.12.3"

[profile.release]
strip = "debuginfo"
